--- a/src/app/styles/shadows.scss
+++ b/src/app/styles/shadows.scss
@@ -28,7 +28,7 @@
     &:not(svg) {
         @apply bg-gray-100 shadow-[6px_6px_10px_0_#D1D9E6,-6px_-6px_10px_0_white];
     }
-    path {
+    > path {
         filter: drop-shadow(6px 6px 10px #D1D9E6) drop-shadow(-6px -6px 10px white);
     }
 }
@@ -63,7 +63,7 @@
     &:not(svg) {
         @apply bg-gray-100 shadow-[2px_2px_2px_0_#D1D9E6,-2px_-2px_2px_0_white];
     }
-    path {
+    > path {
         filter: drop-shadow(2px 2px 2px #D1D9E6) drop-shadow(-2px -2px 2px white);
     }
 }
