--- a/src/app/styles/shadows.scss
+++ b/src/app/styles/shadows.scss
@@ -2,25 +2,28 @@
     &:not(svg) {
         @apply overflow-hidden relative bg-gray-100 shadow-[inset_6px_6px_10px_0_#D1D9E6,inset_-6px_-6px_10px_0_white];
 
-        &::before {
-            content: " ";
-            height: 100%;
-            width: 100%;
-            background-image: url(../../public/assets/noise.png);
-            background-size: cover;
-            background-position: center;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0;
-            mix-blend-mode: color-burn;
-            opacity: 0.8;
+        &:not(.no-noise) {
+            &::before {
+                content: " ";
+                height: 100%;
+                width: 100%;
+                background-image: url(../../public/assets/noise.png);
+                background-size: cover;
+                background-position: center;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 0;
+                mix-blend-mode: color-burn;
+                opacity: 0.8;
+            }
+    
+            * {
+                z-index: 10;
+                background-color: transparent;
+            }
         }
 
-        * {
-            z-index: 10;
-            background-color: transparent;
-        }
     }
 }
 
@@ -36,25 +39,27 @@
 .shadow-inner-sm {
     &:not(svg) {
         @apply bg-gray-100 shadow-[inset_2px_2px_2px_0_#D1D9E6,inset_-2px_-2px_2px_0_white];
+        
+        &:not(.no-noise) {
+            &::before {
+                content: " ";
+                height: 100%;
+                width: 100%;
+                background-image: url(../../public/assets/noise.png);
+                background-size: cover;
+                background-position: center;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 0;
+                mix-blend-mode: color-burn;
+                opacity: 0.8;
+            }
 
-        &::before {
-            content: " ";
-            height: 100%;
-            width: 100%;
-            background-image: url(../../public/assets/noise.png);
-            background-size: cover;
-            background-position: center;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0;
-            mix-blend-mode: color-burn;
-            opacity: 0.8;
-        }
-
-        * {
-            z-index: 10;
-            background-color: transparent;
+            * {
+                z-index: 10;
+                background-color: transparent;
+            }
         }
     }
 }
